[project]
name = "rag-from-scratch"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "bs4>=0.0.2",
    "chromadb>=1.3.5",
    "dotenv>=0.9.9",
    "langchain>=1.0.8",
    "langchain-community>=0.4.1",
    "langchain-google-genai>=3.1.0",
    "langchain-openai>=1.0.3",
    "langchain-text-splitters>=1.0.0",
    "langchainhub>=0.1.21",
    "tiktoken>=0.12.0",
]
